--- a/client/src/dashboard.css
+++ b/client/src/dashboard.css
@@ -49,6 +49,20 @@
   font-size: 14px;
 }
 
+.pagination li.paginateArrow a{
+  cursor: pointer;
+  color: #c9c9c9; 
+}
+
+.pagination li a{
+  cursor: pointer;
+  color: #c9c9c9; 
+}
+
+.pagination li.active{
+  background-color: #00796b; 
+}
+
 /* Modal Styles */
 .modal-content {
   padding: 24px;
@@ -78,10 +92,10 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #42a5f5;
+  background-color: #c9c9c9;
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #1e88e5;
+  background-color: #c9c9c9;
 }
